# AccessMap

./: .gitignore  LICENSE  README.md  tsconfig.spec.json
AccessMap/: README.md  angular.json  eslint.config.js  package-lock.json  package.json
AccessMap/src/: index.html  styles.css
AccessMap/src/app/: app.component.spec.ts  app.component.ts
AccessMap/src/app/directives/: tooltip.directive.spec.ts  tooltip.directive.ts
AccessMap/src/app/display-data/: display-data.component.css  display-data.component.html  display-data.component.ts
AccessMap/src/app/map/: map.component.ts
AccessMap/src/app/map/models/: map.model.ts
AccessMap/src/environments/: environment.ts
backend/: .env.example  README.md  alembic.ini  pyproject.toml  run.py
backend/accesmap/app/: config.py  main.py
backend/accesmap/app/models/: buildings.py
backend/accesmap/database/: database.py  make_migrations.py  migrate.py
backend/accesmap/database/migrations/: env.py
backend/accesmap/database/migrations/versions/: 2025_01_31_1610-3ccaf8badb52_add_tables.py  2025_01_31_1735-cf1fc2871a71_add_tables.py
backend/accesmap/utils/: argurment_parser.py
frontend/src/: styles.css
frontend/src/app/display-data/: display-data.component.css
frontend/src/app/test-utils/: async-data.ts
src/: styles.css
src/app/: app.component.ts
src/app/display-data/: display-data.component.css  display-data.component.ts
src/app/display-data/models/: api-access-libre.model.ts  data.model.ts
src/app/test-utils/mock/: building-details.mock.ts
src/environments/: environment.base.ts  environment.ts
(+73 files in other folders)
