[project]
name = "accesmap"
version = "0.1.0"
description = ""
authors = [
    {name = "hbaltz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest-asyncio (>=0.25.3,<0.26.0)"
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
uvloop = "^0.21.0"
httptools = "^0.6.1"
sqlalchemy = "^2.0.35"
pydantic-settings = "^2.5.2"
pydantic = {version = "^2.9.2", extras = ["email"]}
httpx = "^0.27.2"
rich = "^13.8.1"
sqlalchemy-json = "^0.7.0"
geoalchemy2 = {version = "^0.15.2", extras = ["shapely"]}
geojson-pydantic = "^1.1.1"
psycopg = {extras = ["binary", "pool"], version = "^3.2.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
dirty-equals = "^0.8.0"
polyfactory = "^2.17.0"
inline-snapshot = "^0.12.1"
alembic = "^1.13.3"
ruff = "^0.9.3"
mypy = "^1.14.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 90  # Set max line length
target-version = "py313"  # Specify the Python version

[tool.ruff.lint]
select = ["B", "ANN", "TCH"] # Enforce explicit type annotations and type hints
